Recovered a577ce140b46c542ef133040ecb9cb19743060c4 (#2320)
* Backported v1 from Java 11+ to Java 8+

* Fixes 'oraclejdk10 is deprecated'